--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/eh-logo.jpg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>EveryHome - Coming Soon</title>
+  <meta name="description"
+    content="EveryHome is an all-in-one platform designed to simplify home and business management by connecting users with trusted service providers, offering task management, real-time updates, and seamless transactions.">
+  <meta name="keywords"
+    content="EveryHome, service booking, task management, home maintenance, business support, real-time updates, appointment scheduling, service providers, seamless transactions">
+  <meta name="author" content="EveryHome">
+  <meta property="og:title" content="EveryHome - Coming Soon">
+  <meta property="og:description"
+    content="Get ready for EveryHome, your all-in-one platform for connecting with service providers and managing tasks, appointments, and transactions seamlessly.">
+  <meta property="og:image" content="/eh-logo.jpg">
+  <meta property="og:url" content="https://everyhome.tltechnologies.net">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="EveryHome - Coming Soon">
+  <meta name="twitter:description"
+    content="EveryHome is launching soon. Stay tuned for a better way to manage your home and business needs.">
+  <meta name="twitter:image" content="/eh-logo.jpg">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
