updated social media links

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
   <meta name="twitter:description"
     content="EveryHome is launching soon. Stay tuned for a better way to manage your home and business needs.">
   <meta name="twitter:image" content="/eh-logo.jpg">
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LPTV55JYFJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LPTV55JYFJ');
+</script>
 </head>
 
 <body>
